--- a/movie.html
+++ b/movie.html
@@ -8,8 +8,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <script src="/assets/main.js" type="module"></script>
-    <link rel="stylesheet" href="/assets/bundle.css">
+    <script src="/my-pet-projects/assets/main.js" type="module"></script>
+    <link rel="stylesheet" href="/my-pet-projects/assets/bundle.css">
   </head>
   <body>
     <header data-js-overlay-menu="" class="header is-fixed">
@@ -37,12 +37,12 @@
           <div class="header__actions">
             <button class="header__button button button--transparent" aria-label="Search" title="Search" type="button"><span class="button__icon icon">
                 <svg fill="none" stroke="currentColor">
-                  <use href="/assets/images/icons.svg#search"></use>
+                  <use href="/my-pet-projects/assets/images/icons.svg#search"></use>
                 </svg>
               </span></button>
             <button class="header__button button button--transparent" aria-label="Notifications" title="Notifications" type="button"><span class="button__icon icon">
                 <svg fill="none" stroke="currentColor">
-                  <use href="/assets/images/icons.svg#notification"></use>
+                  <use href="/my-pet-projects/assets/images/icons.svg#notification"></use>
                 </svg>
               </span></button>
           </div>
@@ -59,7 +59,7 @@
     <main class="content">
       <section class="container">
         <section class="movies-slide">
-          <img srcset="/assets/images/Cantavra-320x166.png 320w, /assets/images/Cantavra-400x208.png 400w, /assets/images/Cantavra-640x333.png 640w, /assets/images/Cantavra-800x416.png 800w, /assets/images/Cantavra-1024x532.png 1024w, /assets/images/Cantavra-1280x666.png 1280w, /assets/images/Cantavra-1440x749.png 1440w, /assets/images/Cantavra-1594x835.png 1594w" src="/assets/images/Cantavra-1594x835.png" sizes="(min-width: 1594px) 1594px, 100vw" width="1594" height="835" alt decoding="async" loading="lazy" class="movies-slide__banner">
+          <img srcset="/my-pet-projects/assets/images/Cantavra-320x166.png 320w, /my-pet-projects/assets/images/Cantavra-400x208.png 400w, /my-pet-projects/assets/images/Cantavra-640x333.png 640w, /my-pet-projects/assets/images/Cantavra-800x416.png 800w, /my-pet-projects/assets/images/Cantavra-1024x532.png 1024w, /my-pet-projects/assets/images/Cantavra-1280x666.png 1280w, /my-pet-projects/assets/images/Cantavra-1440x749.png 1440w, /my-pet-projects/assets/images/Cantavra-1594x835.png 1594w" src="/my-pet-projects/assets/images/Cantavra-1594x835.png" sizes="(min-width: 1594px) 1594px, 100vw" width="1594" height="835" alt decoding="async" loading="lazy" class="movies-slide__banner">
           <div class="movies-slide__inner movies-slide__inner--small-padding-y">
             <div class="movies-slide__information">
               <div class="movies-slide__title h3" id="movie-banner-title">
@@ -72,23 +72,23 @@
             <div class="movies-slide__actions">
               <button class="play__button button" type="button"><span class="button__icon icon">
                   <svg fill="currentColor" stroke="none">
-                    <use href="/assets/images/icons.svg#play"></use>
+                    <use href="/my-pet-projects/assets/images/icons.svg#play"></use>
                   </svg>
                 </span><span class="button__label">Play Now</span></button>
               <div class="movies-slide__actions-right">
                 <button class="Movie__button button button--black-06" type="button"><span class="button__icon icon">
                     <svg fill="none" stroke="currentColor">
-                      <use href="/assets/images/icons.svg#add"></use>
+                      <use href="/my-pet-projects/assets/images/icons.svg#add"></use>
                     </svg>
                   </span></button>
                 <button class="Movie__button button button--black-06" type="button"><span class="button__icon icon">
                     <svg fill="none" stroke="currentColor">
-                      <use href="/assets/images/icons.svg#like"></use>
+                      <use href="/my-pet-projects/assets/images/icons.svg#like"></use>
                     </svg>
                   </span></button>
                 <button class="Movie__button button button--black-06" type="button"><span class="button__icon icon">
                     <svg fill="none" stroke="currentColor">
-                      <use href="/assets/images/icons.svg#volume"></use>
+                      <use href="/my-pet-projects/assets/images/icons.svg#volume"></use>
                     </svg>
                   </span></button>
               </div>
@@ -113,12 +113,12 @@
                 <div class="slider-navigation slider-navigation--rounded" id="movie-card-slider-navigation" data-js-slider-navigation="" style="--displayNavigation:center">
                   <button class="slider-navigation__arrow-button slider-navigation__arrow-button-previous button button--black-10" aria-label="Previous slide" title="Previous slide" type="button" data-js-slider-previous-button=""><span class="button__icon icon">
                       <svg fill="none" stroke="currentColor">
-                        <use href="/assets/images/icons.svg#arrow-left"></use>
+                        <use href="/my-pet-projects/assets/images/icons.svg#arrow-left"></use>
                       </svg>
                     </span></button>
                   <button class="slider-navigation__arrow-button slider-navigation__arrow-button-next button button--black-10" aria-label="Next slide" title="Next slide" type="button" data-js-slider-next-button=""><span class="button__icon icon">
                       <svg fill="none" stroke="currentColor">
-                        <use href="/assets/images/icons.svg#arrow-right"></use>
+                        <use href="/my-pet-projects/assets/images/icons.svg#arrow-right"></use>
                       </svg>
                     </span></button>
                 </div>
@@ -179,7 +179,7 @@
                 <h3 class="movie-details__title h6">Reviews</h3>
                 <a class="button button--black-08" href="/"><span class="button__icon icon">
                     <svg fill="none" stroke="currentColor">
-                      <use href="/assets/images/icons.svg#add"></use>
+                      <use href="/my-pet-projects/assets/images/icons.svg#add"></use>
                     </svg>
                   </span><span class="button__label">Add Your Review</span></a>
               </header>
@@ -374,13 +374,13 @@
               <div class="slider-navigation slider-navigation--rounded" id="movie-card-slider-reviews-navigation" data-js-slider-navigation="" style="--displayNavigation:center">
                 <button class="slider-navigation__arrow-button slider-navigation__arrow-button-previous button button--black-10" aria-label="Previous slide" title="Previous slide" type="button" data-js-slider-previous-button=""><span class="button__icon icon">
                     <svg fill="none" stroke="currentColor">
-                      <use href="/assets/images/icons.svg#arrow-left"></use>
+                      <use href="/my-pet-projects/assets/images/icons.svg#arrow-left"></use>
                     </svg>
                   </span></button>
                 <div class="slider-navigation__pagination" data-js-slider-pagination=""></div>
                 <button class="slider-navigation__arrow-button slider-navigation__arrow-button-next button button--black-10" aria-label="Next slide" title="Next slide" type="button" data-js-slider-next-button=""><span class="button__icon icon">
                     <svg fill="none" stroke="currentColor">
-                      <use href="/assets/images/icons.svg#arrow-right"></use>
+                      <use href="/my-pet-projects/assets/images/icons.svg#arrow-right"></use>
                     </svg>
                   </span></button>
               </div>
@@ -394,7 +394,7 @@
                 <div class="movie-details__aside-element">
                   <h3 class="movie-details__title h6"><span class="icon">
                       <svg fill="none" stroke="currentColor">
-                        <use href="/assets/images/icons.svg#calendar"></use>
+                        <use href="/my-pet-projects/assets/images/icons.svg#calendar"></use>
                       </svg>
                     </span><span> Released Year</span></h3>
                   <div class="movies-details__description">
@@ -404,7 +404,7 @@
                 <div class="movie-details__aside-element">
                   <h3 class="movie-details__title h6"><span class="icon">
                       <svg fill="none" stroke="currentColor">
-                        <use href="/assets/images/icons.svg#translate"></use>
+                        <use href="/my-pet-projects/assets/images/icons.svg#translate"></use>
                       </svg>
                     </span><span>Available Languages</span></h3>
                   <div class="movie-details__description">
@@ -430,7 +430,7 @@
                 <div class="movie-details__aside-element">
                   <h3 class="movie-details__title h6"><span class="icon">
                       <svg fill="none" stroke="currentColor">
-                        <use href="/assets/images/icons.svg#rating"></use>
+                        <use href="/my-pet-projects/assets/images/icons.svg#rating"></use>
                       </svg>
                     </span><span> Ratings</span></h3>
                   <div class="movie-details__description">
@@ -461,7 +461,7 @@
                 <div class="movie-details__aside-element">
                   <h3 class="movie-details__title h6"><span class="icon">
                       <svg fill="none" stroke="currentColor">
-                        <use href="/assets/images/icons.svg#gernes"></use>
+                        <use href="/my-pet-projects/assets/images/icons.svg#gernes"></use>
                       </svg>
                     </span><span> Gernes</span></h3>
                   <div class="movie-details__description">
@@ -479,7 +479,7 @@
                   <h3 class="movie-details__title h6">Director</h3>
                   <div class="movie-details__description">
                     <div class="person-card">
-                      <img srcset="/assets/images/1-103x109.png 103w" src="/assets/images/1-103x109.png" sizes="(min-width: 103px) 103px, 100vw" width="103" height="109" alt decoding="async" loading="lazy" class="person-card__img">
+                      <img srcset="/my-pet-projects/assets/images/1-103x109.png 103w" src="/my-pet-projects/assets/images/1-103x109.png" sizes="(min-width: 103px) 103px, 100vw" width="103" height="109" alt decoding="async" loading="lazy" class="person-card__img">
                       <div class="person-card__info">
                         <h4 class="person-card__info-title">
                           <p>Rishab Shetty</p>
@@ -495,7 +495,7 @@
                   <h3 class="movie-details__title h6">Music: </h3>
                   <div class="movie-details__description">
                     <div class="person-card">
-                      <img srcset="/assets/images/2-103x109.png 103w" src="/assets/images/2-103x109.png" sizes="(min-width: 103px) 103px, 100vw" width="103" height="109" alt decoding="async" loading="lazy" class="person-card__img">
+                      <img srcset="/my-pet-projects/assets/images/2-103x109.png 103w" src="/my-pet-projects/assets/images/2-103x109.png" sizes="(min-width: 103px) 103px, 100vw" width="103" height="109" alt decoding="async" loading="lazy" class="person-card__img">
                       <div class="person-card__info">
                         <h4 class="person-card__info-title">
                           <p>B. Ajaneesh Loknath</p>
