--- a/subscriptions.html
+++ b/subscriptions.html
@@ -8,8 +8,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <script src="/assets/main.js" type="module"></script>
-    <link rel="stylesheet" href="/assets/bundle.css">
+    <script src="/my-pet-projects/assets/main.js" type="module"></script>
+    <link rel="stylesheet" href="/my-pet-projects/assets/bundle.css">
   </head>
   <body>
     <header data-js-overlay-menu="" class="header is-fixed">
@@ -37,12 +37,12 @@
           <div class="header__actions">
             <button class="header__button button button--transparent" aria-label="Search" title="Search" type="button"><span class="button__icon icon">
                 <svg fill="none" stroke="currentColor">
-                  <use href="/assets/images/icons.svg#search"></use>
+                  <use href="/my-pet-projects/assets/images/icons.svg#search"></use>
                 </svg>
               </span></button>
             <button class="header__button button button--transparent" aria-label="Notifications" title="Notifications" type="button"><span class="button__icon icon">
                 <svg fill="none" stroke="currentColor">
-                  <use href="/assets/images/icons.svg#notification"></use>
+                  <use href="/my-pet-projects/assets/images/icons.svg#notification"></use>
                 </svg>
               </span></button>
           </div>
