--- a/support.html
+++ b/support.html
@@ -24,13 +24,13 @@
                 <a class="header__menu-link" href="/">Home</a>
               </li>
               <li class="header__menu-item">
-                <a class="header__menu-link" href="/movies">Movies &amp; Shows</a>
+                <a class="header__menu-link" href="/my-pet-projects/movies">Movies &amp; Shows</a>
               </li>
               <li class="header__menu-item">
-                <a class="header__menu-link" href="Support">Support</a>
+                <a class="header__menu-link" href="/my-pet-projects/support">Support</a>
               </li>
               <li class="header__menu-item">
-                <a class="header__menu-link" href="/subscriptions">Subscriptions</a>
+                <a class="header__menu-link" href="/my-pet-projects/subscriptions">Subscriptions</a>
               </li>
             </ul>
           </nav>
